// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile renders a curved-tile tile with default values 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      transform=""
    >
      <path
        d="M -45,0 A 10,10 0 0 1 -55,10 L -54.99999999999999,100 A 100,100 0 0 0 45,0 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M -45,0 A 10,10 0 0 1 -47.928932188134524,7.071067811865475 L -44.39339828220179,10.606601717798211 A 15,15 0 0 0 -40,0 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -47.928932188134524,7.071067811865475 A 10,10 0 0 1 -55,10 L -55,15 A 15,15 0 0 0 -44.39339828220179,10.606601717798211 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 40,0 A 95,95 0 0 1 32.76855558857224,36.354926074683526 L 37.38795325112868,38.268343236508976 A 100,100 0 0 0 45,0 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 32.76855558857224,36.354926074683526 A 95,95 0 0 1 12.175144212722017,67.175144212722 L 15.710678118654755,70.71067811865474 A 100,100 0 0 0 37.38795325112868,38.268343236508976 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 12.175144212722017,67.175144212722 A 95,95 0 0 1 -18.645073925316467,87.76855558857224 L -16.731656763491017,92.38795325112868 A 100,100 0 0 0 15.710678118654755,70.71067811865474 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M -18.645073925316467,87.76855558857224 A 95,95 0 0 1 -54.99999999999999,95 L -54.99999999999999,100 A 100,100 0 0 0 -16.731656763491017,92.38795325112868 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile renders a curved-tile tile with the given parameters 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      id="tile"
      transform="rotate(90 100 200)"
    >
      <path
        d="M 55,200 A 10,10 0 0 1 45,210 L 45.00000000000001,300 A 100,100 0 0 0 145,200 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55,200 A 10,10 0 0 1 52.071067811865476,207.07106781186548 L 55.60660171779821,210.6066017177982 A 15,15 0 0 0 60,200 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476,207.07106781186548 A 10,10 0 0 1 45,210 L 45,215 A 15,15 0 0 0 55.60660171779821,210.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140,200 A 95,95 0 0 1 132.76855558857224,236.35492607468353 L 137.3879532511287,238.26834323650897 A 100,100 0 0 0 145,200 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 132.76855558857224,236.35492607468353 A 95,95 0 0 1 112.17514421272202,267.175144212722 L 115.71067811865476,270.71067811865476 A 100,100 0 0 0 137.3879532511287,238.26834323650897 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 112.17514421272202,267.175144212722 A 95,95 0 0 1 81.35492607468353,287.7685555885722 L 83.26834323650898,292.3879532511287 A 100,100 0 0 0 115.71067811865476,270.71067811865476 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 81.35492607468353,287.7685555885722 A 95,95 0 0 1 45.00000000000001,295 L 45.00000000000001,300 A 100,100 0 0 0 83.26834323650898,292.3879532511287 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile renders a curved-tile-enlarged tile with default values 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      transform=""
    >
      <path
        d="M -45,0 A 10,10 0 0 1 -55,10 V 100 H 0 A 45,45 0 0 0 45,55 V 0 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M -45,0 A 10,10 0 0 1 -47.928932188134524,7.071067811865475 L -44.39339828220179,10.606601717798211 A 15,15 0 0 0 -40,0 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -47.928932188134524,7.071067811865475 A 10,10 0 0 1 -55,10 L -55,15 A 15,15 0 0 0 -44.39339828220179,10.606601717798211 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 40,55 A 40,40 0 0 1 28.284271247461902,83.2842712474619 L 31.81980515339464,86.81980515339464 A 45,45 0 0 0 45,55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 28.284271247461902,83.2842712474619 A 40,40 0 0 1 2.4492935982947065e-15,95 L 2.7554552980815448e-15,100 A 45,45 0 0 0 31.81980515339464,86.81980515339464 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M -55,95 H -27.5 V 100 H -55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -27.5,95 H 0 V 100 H -27.5 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 40,0 H 45 V 27.5 H 40 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 40,27.5 H 45 V 55 H 40 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile renders a curved-tile-enlarged tile with the given parameters 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile-enlarged"
      id="tile"
      transform="rotate(90 100 200)"
    >
      <path
        d="M 55,200 A 10,10 0 0 1 45,210 V 300 H 100 A 45,45 0 0 0 145,255 V 200 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55,200 A 10,10 0 0 1 52.071067811865476,207.07106781186548 L 55.60660171779821,210.6066017177982 A 15,15 0 0 0 60,200 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476,207.07106781186548 A 10,10 0 0 1 45,210 L 45,215 A 15,15 0 0 0 55.60660171779821,210.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140,255 A 40,40 0 0 1 128.2842712474619,283.2842712474619 L 131.81980515339464,286.8198051533946 A 45,45 0 0 0 145,255 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 128.2842712474619,283.2842712474619 A 40,40 0 0 1 100,295 L 100,300 A 45,45 0 0 0 131.81980515339464,286.8198051533946 Z"
          fill="var(--color-even)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 45,295 H 72.5 V 300 H 45 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 72.5,295 H 100 V 300 H 72.5 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,200 H 145 V 227.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,227.5 H 145 V 255 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile renders a straight-tile tile with default values 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      transform=""
    >
      <path
        d="M -45,0 H 45 V 110 H -45 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M -45,0 H -40 V 27.5 H -45 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -45,27.5 H -40 V 55 H -45 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M -45,55 H -40 V 82.5 H -45 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -45,82.5 H -40 V 110 H -45 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 40,0 H 45 V 27.5 H 40 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 40,27.5 H 45 V 55 H 40 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 40,55 H 45 V 82.5 H 40 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 40,82.5 H 45 V 110 H 40 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile renders a straight-tile tile with the given parameters 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(90 100 200)"
    >
      <path
        d="M 55,200 H 145 V 310 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,200 H 60 V 227.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,227.5 H 60 V 255 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,255 H 60 V 282.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,282.5 H 60 V 310 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,200 H 145 V 227.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,227.5 H 145 V 255 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,255 H 145 V 282.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,282.5 H 145 V 310 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile renders a undefined tile with default values 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      transform=""
    >
      <path
        d="M -45,0 H 45 V 110 H -45 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M -45,0 H -40 V 27.5 H -45 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -45,27.5 H -40 V 55 H -45 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M -45,55 H -40 V 82.5 H -45 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -45,82.5 H -40 V 110 H -45 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 40,0 H 45 V 27.5 H 40 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 40,27.5 H 45 V 55 H 40 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 40,55 H 45 V 82.5 H 40 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 40,82.5 H 45 V 110 H 40 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile updates when the parameter direction is modified 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(90 100 200)rotate(180 100 255)"
    >
      <path
        d="M 55,200 H 145 V 310 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,200 H 60 V 227.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,227.5 H 60 V 255 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,255 H 60 V 282.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,282.5 H 60 V 310 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,200 H 145 V 227.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,227.5 H 145 V 255 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,255 H 145 V 282.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,282.5 H 145 V 310 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile updates when the parameter ratio is modified 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(90 100 200)"
    >
      <path
        d="M 55,200 H 145 V 310 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,200 H 60 V 227.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,227.5 H 60 V 255 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,255 H 60 V 282.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,282.5 H 60 V 310 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,200 H 145 V 227.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,227.5 H 145 V 255 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,255 H 145 V 282.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,282.5 H 145 V 310 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile updates when the parameter rotation is modified 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(45 100 200)"
    >
      <path
        d="M 55,200 H 145 V 310 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,200 H 60 V 227.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,227.5 H 60 V 255 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,255 H 60 V 282.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,282.5 H 60 V 310 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,200 H 145 V 227.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,227.5 H 145 V 255 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,255 H 145 V 282.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,282.5 H 145 V 310 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile updates when the parameter type is modified 1`] = `
<body>
  <div>
    <g
      class="tile curved-tile"
      id="tile"
      transform="rotate(90 100 200)"
    >
      <path
        d="M 55,200 A 10,10 0 0 1 45,210 L 45.00000000000001,300 A 100,100 0 0 0 145,200 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 55,200 A 10,10 0 0 1 52.071067811865476,207.07106781186548 L 55.60660171779821,210.6066017177982 A 15,15 0 0 0 60,200 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 52.071067811865476,207.07106781186548 A 10,10 0 0 1 45,210 L 45,215 A 15,15 0 0 0 55.60660171779821,210.6066017177982 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier curved-barrier"
      >
        
        <path
          d="M 140,200 A 95,95 0 0 1 132.76855558857224,236.35492607468353 L 137.3879532511287,238.26834323650897 A 100,100 0 0 0 145,200 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 132.76855558857224,236.35492607468353 A 95,95 0 0 1 112.17514421272202,267.175144212722 L 115.71067811865476,270.71067811865476 A 100,100 0 0 0 137.3879532511287,238.26834323650897 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 112.17514421272202,267.175144212722 A 95,95 0 0 1 81.35492607468353,287.7685555885722 L 83.26834323650898,292.3879532511287 A 100,100 0 0 0 115.71067811865476,270.71067811865476 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 81.35492607468353,287.7685555885722 A 95,95 0 0 1 45.00000000000001,295 L 45.00000000000001,300 A 100,100 0 0 0 83.26834323650898,292.3879532511287 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile updates when the parameter x is modified 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(90 40 200)"
    >
      <path
        d="M -5,200 H 85 V 310 H -5 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M -5,200 H 0 V 227.5 H -5 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -5,227.5 H 0 V 255 H -5 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M -5,255 H 0 V 282.5 H -5 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M -5,282.5 H 0 V 310 H -5 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 80,200 H 85 V 227.5 H 80 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 80,227.5 H 85 V 255 H 80 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 80,255 H 85 V 282.5 H 80 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 80,282.5 H 85 V 310 H 80 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;

exports[`Tile updates when the parameter y is modified 1`] = `
<body>
  <div>
    <g
      class="tile straight-tile"
      id="tile"
      transform="rotate(90 100 40)"
    >
      <path
        d="M 55,40 H 145 V 150 H 55 Z"
        fill="var(--color-ground)"
        stroke="var(--color-separator)"
        stroke-width="var(--stroke-width-tile)"
      />
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 55,40 H 60 V 67.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,67.5 H 60 V 95 H 55 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 55,95 H 60 V 122.5 H 55 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 55,122.5 H 60 V 150 H 55 Z"
          fill="var(--color-odd)"
        />
      </g>
      <g
        class="barrier straight-barrier"
      >
        
        <path
          d="M 140,40 H 145 V 67.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,67.5 H 145 V 95 H 140 Z"
          fill="var(--color-even)"
        />
        
        <path
          d="M 140,95 H 145 V 122.5 H 140 Z"
          fill="var(--color-odd)"
        />
        
        <path
          d="M 140,122.5 H 145 V 150 H 140 Z"
          fill="var(--color-even)"
        />
      </g>
    </g>
    
    
  </div>
</body>
`;
